<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/corFundo">



    <TextView
        android:id="@+id/titMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/titDashboard"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titMenu" />

    <ImageView
        android:id="@+id/imgIdioma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/titMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titMenu"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pt"
        android:onClick="telaConfig"/>

    <Button
        android:id="@+id/btnPeriodo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/borda_arredondada"
        android:text="@string/txtSalvar"
        android:textColor="@color/corTextoInverso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgLogoff"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/imgLogoff"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:onClick="sair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardReceber"
        app:srcCompat="@drawable/logoff" />

    <TextView
        android:id="@+id/txtLogoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="sair"
        android:text="LOGOFF"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/imgLogoff"
        app:layout_constraintStart_toStartOf="@+id/imgLogoff"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoff" />

    <ImageView
        android:id="@+id/imgConfig"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:onClick="telaConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgLogoff"
        app:srcCompat="@drawable/config" />

    <TextView
        android:id="@+id/txtConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/titConfig"
        app:layout_constraintEnd_toEndOf="@+id/imgConfig"
        app:layout_constraintStart_toStartOf="@+id/imgConfig"
        app:layout_constraintTop_toBottomOf="@+id/imgConfig"
        android:onClick="telaConfig"
        android:textSize="10sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPagar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="2dp"
        app:layout_constraintEnd_toStartOf="@+id/cardPago"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPeriodo">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtPagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPagar"
                android:textColor="@color/corTextoInverso"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="124dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtTotPagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTotPagar"
                android:textColor="@color/corTextoInverso"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPago"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="#FFFF00"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardPagar"
        app:layout_constraintTop_toTopOf="@+id/cardPagar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_margin="2dp"
                android:background="#FFFF00" />

            <TextView
                android:id="@+id/txtPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPago"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="124dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_margin="2dp"
                android:background="#FFFF00" />

            <TextView
                android:id="@+id/txtTotPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTotPagar"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_margin="2dp"
                android:background="#FFFF00" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardReceber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#228B22"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="2dp"
        app:layout_constraintEnd_toStartOf="@+id/cardVencida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardPagar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_margin="2dp"
                android:background="#228B22" />

            <TextView
                android:id="@+id/txtReceber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtReceber"
                android:textColor="@color/corTextoInverso"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="124dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_margin="2dp"
                android:background="#228B22" />

            <TextView
                android:id="@+id/txtTotReceber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTotPagar"
                android:textColor="@color/corTextoInverso"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_margin="2dp"
                android:background="#228B22" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardVencida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="#F00"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardReceber"
        app:layout_constraintTop_toTopOf="@+id/cardReceber">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_margin="2dp"
                android:background="#F00" />

            <TextView
                android:id="@+id/txtVencida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtVencida"
                android:textColor="@color/corTextoInverso"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="124dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_margin="2dp"
                android:background="#F00" />

            <TextView
                android:id="@+id/txtTotVencida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTotVencida"
                android:textColor="@color/corTextoInverso"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_margin="2dp"
                android:background="#F00" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>